3.5.0 Folia support, support 1.8-26.1